Implemented inventory, reworked orders